# rust-microbit-v2-door-sensor

./: Cargo.toml  Embed.toml  memory.x
src/: main.rs
