[package]
name = "rust-microbit-v2-door-sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
microbit-v2 = "0.13.0"
panic-halt = "0.2.0"
rtt-target = "0.5.0"
